# KGKB

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start-prod.sh  start.sh
.night-factory/: check_progress.sh  tasks.json
backend/: run.py
backend/app/: main.py
backend/app/models/: knowledge.py
backend/app/services/: embedding.py  knowledge.py  vector_store.py
cli/kgkb/: __init__.py  main.py
docs/: E2E-VERIFICATION.md  PRD.md  QMD-INTEGRATION-PLAN.md  RESEARCH.md  e2e-report.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConfirmDialog.tsx  EmptyState.tsx  GraphFilters.tsx  LinkDialog.tsx  LinkModeDialog.tsx  LoadingSpinner.tsx  NodeDetailPanel.tsx  Toast.tsx
frontend/src/hooks/: useKeyboard.ts
frontend/src/views/: AddKnowledge.tsx  KnowledgeDetail.tsx  KnowledgeGraph.tsx  KnowledgeList.tsx  SearchView.tsx
scripts/: e2e_verify.py  qmd_import_poc.py
tests/: conftest.py  test_api.py  test_e2e.py
